; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-pending-operations.c_pending_operation_dump.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-pending-operations.c_pending_operation_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pending_operation = type { i32, i32, i32 }

@.str = private unnamed_addr constant [35 x i8] c"type:%d, oldpath: %s, newpath: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pending_operation*)* @pending_operation_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pending_operation_dump(%struct.pending_operation* %0) #0 {
  %2 = alloca %struct.pending_operation*, align 8
  store %struct.pending_operation* %0, %struct.pending_operation** %2, align 8
  %3 = load %struct.pending_operation*, %struct.pending_operation** %2, align 8
  %4 = getelementptr inbounds %struct.pending_operation, %struct.pending_operation* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.pending_operation*, %struct.pending_operation** %2, align 8
  %7 = getelementptr inbounds %struct.pending_operation, %struct.pending_operation* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.pending_operation*, %struct.pending_operation** %2, align 8
  %10 = getelementptr inbounds %struct.pending_operation, %struct.pending_operation* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @kprintf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @kprintf(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
